--- a/CreateDB.ipynb
+++ b/CreateDB.ipynb
@@ -2,17 +2,26 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 8,
    "id": "8e3033f5",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The sql extension is already loaded. To reload it, use:\n",
+      "  %reload_ext sql\n"
+     ]
+    }
+   ],
    "source": [
     "%load_ext sql"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
    "id": "4051c1ae",
    "metadata": {},
    "outputs": [
@@ -22,7 +31,7 @@
        "'Connected: @library.db'"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -41,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 152,
+   "execution_count": 10,
    "id": "b2a618d5",
    "metadata": {},
    "outputs": [
@@ -59,7 +68,7 @@
        "[]"
       ]
      },
-     "execution_count": 152,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -79,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 153,
+   "execution_count": 11,
    "id": "f51068da",
    "metadata": {},
    "outputs": [
@@ -97,7 +106,7 @@
        "[]"
       ]
      },
-     "execution_count": 153,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -120,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 154,
+   "execution_count": 12,
    "id": "0f0d9357",
    "metadata": {},
    "outputs": [
@@ -138,7 +147,7 @@
        "[]"
       ]
      },
-     "execution_count": 154,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -158,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 155,
+   "execution_count": 13,
    "id": "493642fd",
    "metadata": {},
    "outputs": [
@@ -176,7 +185,7 @@
        "[]"
       ]
      },
-     "execution_count": 155,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -199,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 156,
+   "execution_count": 14,
    "id": "860f7516",
    "metadata": {},
    "outputs": [
@@ -217,7 +226,7 @@
        "[]"
       ]
      },
-     "execution_count": 156,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -237,7 +246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 157,
+   "execution_count": 15,
    "id": "b607d6bb",
    "metadata": {},
    "outputs": [
@@ -255,7 +264,7 @@
        "[]"
       ]
      },
-     "execution_count": 157,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -275,7 +284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 158,
+   "execution_count": 16,
    "id": "6bdbff6c",
    "metadata": {},
    "outputs": [
@@ -293,7 +302,7 @@
        "[]"
       ]
      },
-     "execution_count": 158,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -310,7 +319,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 159,
+   "execution_count": 19,
    "id": "a8f103d1",
    "metadata": {},
    "outputs": [
@@ -328,7 +337,7 @@
        "[]"
       ]
      },
-     "execution_count": 159,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -337,14 +346,14 @@
     "%%sql\n",
     "\n",
     "CREATE TABLE Room_Booking (\n",
+    "    bid INTEGER PRIMARY KEY AUTOINCREMENT,\n",
     "    eid INTEGER,\n",
     "    room_number INTEGER,\n",
     "    date TEXT NOT NULL,\n",
     "    start_time TEXT NOT NULL,\n",
     "    end_time TEXT NOT NULL,\n",
-    "    PRIMARY KEY (eid, room_number),\n",
-    "    FOREIGN KEY (eid) REFERENCES Event(eid),\n",
-    "    FOREIGN KEY (room_number) REFERENCES Room(room_number),\n",
+    "    FOREIGN KEY (eid) REFERENCES Event(eid) ON DELETE CASCADE,\n",
+    "    FOREIGN KEY (room_number) REFERENCES Room(room_number) ON DELETE CASCADE,\n",
     "    CHECK (end_time > start_time),\n",
     "    CHECK (start_time IS strftime('%H:%M',start_time)),\n",
     "    CHECK (end_time IS strftime('%H:%M',end_time)),\n",
@@ -354,7 +363,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 160,
+   "execution_count": 21,
+   "id": "9b25f177",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " * sqlite:///library.db\n",
+      "Done.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[]"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "%%sql\n",
+    "\n",
+    "CREATE TABLE Attendee (\n",
+    "    bid INTEGER,\n",
+    "    cid INTEGER,\n",
+    "    PRIMARY KEY (bid, cid),\n",
+    "    FOREIGN KEY (bid) REFERENCES Room_Booking(bid) ON DELETE CASCADE,\n",
+    "    FOREIGN KEY (cid) REFERENCES Customer(cid) ON DELETE CASCADE\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
    "id": "7556e9ff",
    "metadata": {},
    "outputs": [
@@ -372,7 +418,7 @@
        "[]"
       ]
      },
-     "execution_count": 160,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -397,7 +443,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 161,
+   "execution_count": 23,
    "id": "85f7562c",
    "metadata": {},
    "outputs": [
@@ -415,7 +461,7 @@
        "[]"
       ]
      },
-     "execution_count": 161,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -446,7 +492,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 162,
+   "execution_count": 24,
    "id": "b0008bae",
    "metadata": {},
    "outputs": [
@@ -466,7 +512,7 @@
        "[]"
       ]
      },
-     "execution_count": 162,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -511,7 +557,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 163,
+   "execution_count": 40,
    "id": "d37415a8",
    "metadata": {},
    "outputs": [
@@ -520,6 +566,8 @@
      "output_type": "stream",
      "text": [
       " * sqlite:///library.db\n",
+      "Done.\n",
+      "Done.\n",
       "Done.\n",
       "Done.\n"
      ]
@@ -530,7 +578,7 @@
        "[]"
       ]
      },
-     "execution_count": 163,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -538,7 +586,7 @@
    "source": [
     "%%sql\n",
     "\n",
-    "CREATE TRIGGER check_existing_customer\n",
+    "CREATE TRIGGER IF NOT EXISTS check_existing_customer\n",
     "BEFORE INSERT ON Borrowed\n",
     "WHEN NOT EXISTS (\n",
     "    SELECT * FROM Customer\n",
@@ -548,7 +596,7 @@
     "    SELECT RAISE (FAIL, 'No such customer');\n",
     "END;\n",
     "\n",
-    "CREATE TRIGGER check_existing_item\n",
+    "CREATE TRIGGER IF NOT EXISTS check_existing_item\n",
     "BEFORE INSERT ON Borrowed\n",
     "WHEN NOT EXISTS (\n",
     "    SELECT * FROM Item\n",
@@ -556,6 +604,26 @@
     ")\n",
     "BEGIN\n",
     "    SELECT RAISE (FAIL, 'No such item');\n",
+    "END;\n",
+    "\n",
+    "CREATE TRIGGER IF NOT EXISTS check_cust_before_attendee_insert\n",
+    "BEFORE INSERT ON Attendee\n",
+    "WHEN NOT EXISTS (\n",
+    "    SELECT * FROM Customer\n",
+    "    WHERE cid = NEW.cid\n",
+    ")\n",
+    "BEGIN\n",
+    "    SELECT RAISE (FAIL, 'No such customer');\n",
+    "END;\n",
+    "\n",
+    "CREATE TRIGGER IF NOT EXISTS check_booking_before_attendee_insert\n",
+    "BEFORE INSERT ON Attendee\n",
+    "WHEN NOT EXISTS (\n",
+    "    SELECT * FROM Room_Booking\n",
+    "    WHERE bid = NEW.bid\n",
+    ")\n",
+    "BEGIN\n",
+    "    SELECT RAISE (FAIL, 'No such event');\n",
     "END;"
    ]
   },
@@ -569,7 +637,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 164,
+   "execution_count": 26,
    "id": "1e6b4539",
    "metadata": {},
    "outputs": [
@@ -596,7 +664,7 @@
        "[]"
       ]
      },
-     "execution_count": 164,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -638,7 +706,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 165,
+   "execution_count": 27,
    "id": "5ad746a0",
    "metadata": {},
    "outputs": [
@@ -665,7 +733,7 @@
        "[]"
       ]
      },
-     "execution_count": 165,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -697,7 +765,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 166,
+   "execution_count": 28,
    "id": "e9fb5758",
    "metadata": {},
    "outputs": [
@@ -724,7 +792,7 @@
        "[]"
       ]
      },
-     "execution_count": 166,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -765,7 +833,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 167,
+   "execution_count": 29,
    "id": "9ed0cc8e",
    "metadata": {},
    "outputs": [
@@ -792,7 +860,7 @@
        "[]"
       ]
      },
-     "execution_count": 167,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -833,7 +901,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 168,
+   "execution_count": 30,
    "id": "99c56d17",
    "metadata": {},
    "outputs": [
@@ -860,7 +928,7 @@
        "[]"
       ]
      },
-     "execution_count": 168,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -901,7 +969,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 169,
+   "execution_count": 31,
    "id": "4a2e5ebb",
    "metadata": {},
    "outputs": [
@@ -929,7 +997,7 @@
        "[]"
       ]
      },
-     "execution_count": 169,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -973,7 +1041,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 170,
+   "execution_count": 32,
    "id": "cbdfeedc",
    "metadata": {},
    "outputs": [
@@ -1000,7 +1068,7 @@
        "[]"
       ]
      },
-     "execution_count": 170,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1041,7 +1109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 171,
+   "execution_count": 33,
    "id": "2d460d01",
    "metadata": {},
    "outputs": [
@@ -1068,7 +1136,7 @@
        "[]"
       ]
      },
-     "execution_count": 171,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1109,7 +1177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 172,
+   "execution_count": 34,
    "id": "b316ae1b",
    "metadata": {},
    "outputs": [
@@ -1127,7 +1195,7 @@
        "[]"
       ]
      },
-     "execution_count": 172,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1150,7 +1218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 173,
+   "execution_count": 35,
    "id": "5a5d1ef3",
    "metadata": {},
    "outputs": [
@@ -1168,7 +1236,7 @@
        "[]"
       ]
      },
-     "execution_count": 173,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1191,7 +1259,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 151,
+   "execution_count": 46,
+   "id": "9ba0cae1",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " * sqlite:///library.db\n",
+      "5 rows affected.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[]"
+      ]
+     },
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "%%sql\n",
+    "\n",
+    "INSERT INTO Attendee (bid, cid)\n",
+    "VALUES (1, 1),\n",
+    "(1, 2),\n",
+    "(1, 3),\n",
+    "(1, 4),\n",
+    "(1, 5);"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
    "id": "7a7de543",
    "metadata": {},
    "outputs": [
@@ -1209,18 +1313,12 @@
       "Done.\n",
       "Done.\n",
       "Done.\n",
-      "Done.\n"
+      "Done.\n",
+      "Done.\n",
+      "(sqlite3.OperationalError) no such table: Personnel\n",
+      "[SQL: DROP TABLE Personnel;]\n",
+      "(Background on this error at: https://sqlalche.me/e/14/e3q8)\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "[]"
-      ]
-     },
-     "execution_count": 151,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -1237,12 +1335,14 @@
     "DROP TABLE Room_Booking;\n",
     "DROP TABLE Personnel;\n",
     "DROP TABLE Future_Item;\n",
+    "DROP TABLE Attendee;\n",
+    "DROP TABLE Personnel;\n",
     "'''"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 174,
+   "execution_count": 38,
    "id": "f5322885",
    "metadata": {},
    "outputs": [
@@ -1376,7 +1476,7 @@
        " (10, 'Frank', 'Ocean', '2004-12-12', 'volunteer', '2019-06-06', 0.0)]"
       ]
      },
-     "execution_count": 174,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1390,7 +1490,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "88cac2f8",
+   "id": "4b3c57a4",
    "metadata": {},
    "outputs": [],
    "source": []
