--- a/CreateDB.ipynb
+++ b/CreateDB.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "8e3033f5",
    "metadata": {},
    "outputs": [],
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "4051c1ae",
    "metadata": {},
    "outputs": [
@@ -22,7 +22,7 @@
        "'Connected: @library.db'"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -548,7 +548,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 5,
    "id": "d37415a8",
    "metadata": {},
    "outputs": [
@@ -557,6 +557,7 @@
      "output_type": "stream",
      "text": [
       " * sqlite:///library.db\n",
+      "Done.\n",
       "Done.\n",
       "Done.\n",
       "Done.\n",
@@ -569,7 +570,7 @@
        "[]"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -615,7 +616,23 @@
     ")\n",
     "BEGIN\n",
     "    SELECT RAISE (FAIL, 'No such event');\n",
-    "END;"
+    "END;\n",
+    "\n",
+    "CREATE TRIGGER IF NOT EXISTS check_room_capacity_before_insert\n",
+    "BEFORE INSERT ON Attendee\n",
+    "BEGIN\n",
+    "    SELECT CASE\n",
+    "        WHEN (\n",
+    "            SELECT COUNT(*) FROM Attendee\n",
+    "            WHERE bid = NEW.bid\n",
+    "        ) >= (\n",
+    "                SELECT capacity FROM Attendee NATURAL JOIN Room_Booking NATURAL JOIN Room\n",
+    "                WHERE bid = NEW.bid\n",
+    "            )\n",
+    "        THEN\n",
+    "            RAISE (FAIL, 'Capacity for event in room is full')\n",
+    "    END;\n",
+    "END;\n"
    ]
   },
   {
