--- a/CreateDB.ipynb
+++ b/CreateDB.ipynb
@@ -2,17 +2,26 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 43,
    "id": "8e3033f5",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The sql extension is already loaded. To reload it, use:\n",
+      "  %reload_ext sql\n"
+     ]
+    }
+   ],
    "source": [
     "%load_ext sql"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 44,
    "id": "4051c1ae",
    "metadata": {},
    "outputs": [
@@ -22,7 +31,7 @@
        "'Connected: @library.db'"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -41,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 45,
    "id": "b2a618d5",
    "metadata": {},
    "outputs": [
@@ -59,7 +68,7 @@
        "[]"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -79,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 46,
    "id": "f51068da",
    "metadata": {},
    "outputs": [
@@ -97,7 +106,7 @@
        "[]"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -120,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 47,
    "id": "0f0d9357",
    "metadata": {},
    "outputs": [
@@ -138,7 +147,7 @@
        "[]"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -158,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 48,
    "id": "493642fd",
    "metadata": {},
    "outputs": [
@@ -176,7 +185,7 @@
        "[]"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -199,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 49,
    "id": "860f7516",
    "metadata": {},
    "outputs": [
@@ -217,7 +226,7 @@
        "[]"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -237,7 +246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 50,
    "id": "b607d6bb",
    "metadata": {},
    "outputs": [
@@ -255,7 +264,7 @@
        "[]"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -275,7 +284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 51,
    "id": "6bdbff6c",
    "metadata": {},
    "outputs": [
@@ -293,7 +302,7 @@
        "[]"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -310,7 +319,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 52,
    "id": "a8f103d1",
    "metadata": {},
    "outputs": [
@@ -328,7 +337,7 @@
        "[]"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -354,7 +363,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 53,
    "id": "9b25f177",
    "metadata": {},
    "outputs": [
@@ -372,7 +381,7 @@
        "[]"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 53,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -391,7 +400,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 54,
    "id": "7556e9ff",
    "metadata": {},
    "outputs": [
@@ -409,7 +418,7 @@
        "[]"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 54,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -423,7 +432,7 @@
     "    last_name VARCHAR(15) NOT NULL,\n",
     "    birthdate TEXT NOT NULL,\n",
     "    role VARCHAR(15) NOT NULL,\n",
-    "    join_date TEXT NOT NULL,\n",
+    "    join_date TEXT NOT NULL DEFAULT (DATE('now')),\n",
     "    salary REAL NOT NULL,\n",
     "    CHECK (role = 'supervisor' OR role = 'volunteer'),\n",
     "    CHECK (salary >= 0),\n",
@@ -434,7 +443,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 55,
    "id": "85f7562c",
    "metadata": {},
    "outputs": [
@@ -452,7 +461,7 @@
        "[]"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 55,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -483,7 +492,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 56,
    "id": "b0008bae",
    "metadata": {},
    "outputs": [
@@ -503,7 +512,7 @@
        "[]"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 56,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -548,7 +557,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 57,
    "id": "d37415a8",
    "metadata": {},
    "outputs": [
@@ -570,7 +579,7 @@
        "[]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 57,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -645,7 +654,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 58,
    "id": "1e6b4539",
    "metadata": {},
    "outputs": [
@@ -672,7 +681,7 @@
        "[]"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 58,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -714,7 +723,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 59,
    "id": "5ad746a0",
    "metadata": {},
    "outputs": [
@@ -741,7 +750,7 @@
        "[]"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 59,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -773,7 +782,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 60,
    "id": "e9fb5758",
    "metadata": {},
    "outputs": [
@@ -800,7 +809,7 @@
        "[]"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 60,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -841,7 +850,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 61,
    "id": "9ed0cc8e",
    "metadata": {},
    "outputs": [
@@ -868,7 +877,7 @@
        "[]"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 61,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -909,7 +918,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 62,
    "id": "99c56d17",
    "metadata": {},
    "outputs": [
@@ -936,7 +945,7 @@
        "[]"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 62,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -977,7 +986,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 63,
    "id": "4a2e5ebb",
    "metadata": {},
    "outputs": [
@@ -1005,7 +1014,7 @@
        "[]"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 63,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1049,7 +1058,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 64,
    "id": "cbdfeedc",
    "metadata": {},
    "outputs": [
@@ -1076,7 +1085,7 @@
        "[]"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 64,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1111,13 +1120,13 @@
     "INSERT INTO Personnel (first_name, last_name, birthdate, role, join_date, salary)\n",
     "VALUES ('Jean', 'Dawson', '2004-12-12', 'volunteer', '2021-04-25', 0);\n",
     "\n",
-    "INSERT INTO Personnel (first_name, last_name, birthdate, role, join_date, salary)\n",
-    "VALUES ('Frank', 'Ocean', '2004-12-12', 'volunteer', '2019-06-06', 0);"
+    "INSERT INTO Personnel (first_name, last_name, birthdate, role, salary)\n",
+    "VALUES ('Frank', 'Ocean', '2004-12-12', 'volunteer', 0);"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 65,
    "id": "2d460d01",
    "metadata": {},
    "outputs": [
@@ -1144,7 +1153,7 @@
        "[]"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 65,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1185,7 +1194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 66,
    "id": "b316ae1b",
    "metadata": {},
    "outputs": [
@@ -1203,7 +1212,7 @@
        "[]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 66,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1229,7 +1238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 67,
    "id": "5a5d1ef3",
    "metadata": {},
    "outputs": [
@@ -1247,7 +1256,7 @@
        "[]"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 67,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1270,7 +1279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 68,
    "id": "9ba0cae1",
    "metadata": {},
    "outputs": [
@@ -1288,7 +1297,7 @@
        "[]"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 68,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1306,7 +1315,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 42,
    "id": "7a7de543",
    "metadata": {},
    "outputs": [
@@ -1325,11 +1334,18 @@
       "Done.\n",
       "Done.\n",
       "Done.\n",
-      "Done.\n",
-      "(sqlite3.OperationalError) no such table: Personnel\n",
-      "[SQL: DROP TABLE Personnel;]\n",
-      "(Background on this error at: https://sqlalche.me/e/14/e3q8)\n"
+      "Done.\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[]"
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -1347,13 +1363,12 @@
     "DROP TABLE Personnel;\n",
     "DROP TABLE Future_Item;\n",
     "DROP TABLE Attendee;\n",
-    "DROP TABLE Personnel;\n",
     "'''"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 41,
    "id": "f5322885",
    "metadata": {},
    "outputs": [
@@ -1371,123 +1386,55 @@
        "<table>\n",
        "    <thead>\n",
        "        <tr>\n",
-       "            <th>pid</th>\n",
-       "            <th>first_name</th>\n",
-       "            <th>last_name</th>\n",
-       "            <th>birthdate</th>\n",
-       "            <th>role</th>\n",
-       "            <th>join_date</th>\n",
-       "            <th>salary</th>\n",
+       "            <th>id</th>\n",
+       "            <th>cid</th>\n",
+       "            <th>borrow_date</th>\n",
+       "            <th>due_date</th>\n",
        "        </tr>\n",
        "    </thead>\n",
        "    <tbody>\n",
        "        <tr>\n",
        "            <td>1</td>\n",
-       "            <td>Andrew</td>\n",
-       "            <td>Mcdonald</td>\n",
-       "            <td>2004-12-12</td>\n",
-       "            <td>volunteer</td>\n",
-       "            <td>2022-03-12</td>\n",
-       "            <td>0.0</td>\n",
-       "        </tr>\n",
-       "        <tr>\n",
-       "            <td>2</td>\n",
-       "            <td>Dalauan</td>\n",
-       "            <td>Sparrow</td>\n",
-       "            <td>2000-09-17</td>\n",
-       "            <td>supervisor</td>\n",
-       "            <td>2022-03-12</td>\n",
-       "            <td>50000.0</td>\n",
+       "            <td>6</td>\n",
+       "            <td>2023-07-30</td>\n",
+       "            <td>2023-08-09</td>\n",
        "        </tr>\n",
        "        <tr>\n",
        "            <td>3</td>\n",
-       "            <td>Mike</td>\n",
-       "            <td>Andrews</td>\n",
-       "            <td>2002-09-12</td>\n",
-       "            <td>volunteer</td>\n",
-       "            <td>2023-04-16</td>\n",
-       "            <td>0.0</td>\n",
-       "        </tr>\n",
-       "        <tr>\n",
-       "            <td>4</td>\n",
-       "            <td>Rory</td>\n",
-       "            <td>Mcdonald</td>\n",
-       "            <td>1998-01-09</td>\n",
-       "            <td>volunteer</td>\n",
-       "            <td>2022-03-12</td>\n",
-       "            <td>0.0</td>\n",
+       "            <td>7</td>\n",
+       "            <td>2023-07-30</td>\n",
+       "            <td>2023-08-09</td>\n",
        "        </tr>\n",
        "        <tr>\n",
        "            <td>5</td>\n",
-       "            <td>Kirk</td>\n",
-       "            <td>Robles</td>\n",
-       "            <td>2001-03-12</td>\n",
-       "            <td>supervisor</td>\n",
-       "            <td>2023-02-18</td>\n",
-       "            <td>45000.0</td>\n",
-       "        </tr>\n",
-       "        <tr>\n",
-       "            <td>6</td>\n",
-       "            <td>Andrew</td>\n",
-       "            <td>Lee</td>\n",
-       "            <td>2006-08-24</td>\n",
-       "            <td>volunteer</td>\n",
-       "            <td>2023-06-25</td>\n",
-       "            <td>0.0</td>\n",
+       "            <td>8</td>\n",
+       "            <td>2023-07-30</td>\n",
+       "            <td>2023-08-09</td>\n",
        "        </tr>\n",
        "        <tr>\n",
        "            <td>7</td>\n",
-       "            <td>Sarah</td>\n",
-       "            <td>Chow</td>\n",
-       "            <td>2002-05-30</td>\n",
-       "            <td>volunteer</td>\n",
-       "            <td>2023-06-24</td>\n",
-       "            <td>0.0</td>\n",
-       "        </tr>\n",
-       "        <tr>\n",
-       "            <td>8</td>\n",
-       "            <td>Sally</td>\n",
-       "            <td>Smith</td>\n",
-       "            <td>1984-07-23</td>\n",
-       "            <td>supervisor</td>\n",
-       "            <td>2001-04-25</td>\n",
-       "            <td>65000.0</td>\n",
+       "            <td>9</td>\n",
+       "            <td>2023-07-30</td>\n",
+       "            <td>2023-08-09</td>\n",
        "        </tr>\n",
        "        <tr>\n",
        "            <td>9</td>\n",
-       "            <td>Jean</td>\n",
-       "            <td>Dawson</td>\n",
-       "            <td>2004-12-12</td>\n",
-       "            <td>volunteer</td>\n",
-       "            <td>2021-04-25</td>\n",
-       "            <td>0.0</td>\n",
-       "        </tr>\n",
-       "        <tr>\n",
        "            <td>10</td>\n",
-       "            <td>Frank</td>\n",
-       "            <td>Ocean</td>\n",
-       "            <td>2004-12-12</td>\n",
-       "            <td>volunteer</td>\n",
-       "            <td>2019-06-06</td>\n",
-       "            <td>0.0</td>\n",
+       "            <td>2023-07-30</td>\n",
+       "            <td>2023-08-09</td>\n",
        "        </tr>\n",
        "    </tbody>\n",
        "</table>"
       ],
       "text/plain": [
-       "[(1, 'Andrew', 'Mcdonald', '2004-12-12', 'volunteer', '2022-03-12', 0.0),\n",
-       " (2, 'Dalauan', 'Sparrow', '2000-09-17', 'supervisor', '2022-03-12', 50000.0),\n",
-       " (3, 'Mike', 'Andrews', '2002-09-12', 'volunteer', '2023-04-16', 0.0),\n",
-       " (4, 'Rory', 'Mcdonald', '1998-01-09', 'volunteer', '2022-03-12', 0.0),\n",
-       " (5, 'Kirk', 'Robles', '2001-03-12', 'supervisor', '2023-02-18', 45000.0),\n",
-       " (6, 'Andrew', 'Lee', '2006-08-24', 'volunteer', '2023-06-25', 0.0),\n",
-       " (7, 'Sarah', 'Chow', '2002-05-30', 'volunteer', '2023-06-24', 0.0),\n",
-       " (8, 'Sally', 'Smith', '1984-07-23', 'supervisor', '2001-04-25', 65000.0),\n",
-       " (9, 'Jean', 'Dawson', '2004-12-12', 'volunteer', '2021-04-25', 0.0),\n",
-       " (10, 'Frank', 'Ocean', '2004-12-12', 'volunteer', '2019-06-06', 0.0)]"
+       "[(1, 6, '2023-07-30', '2023-08-09'),\n",
+       " (3, 7, '2023-07-30', '2023-08-09'),\n",
+       " (5, 8, '2023-07-30', '2023-08-09'),\n",
+       " (7, 9, '2023-07-30', '2023-08-09'),\n",
+       " (9, 10, '2023-07-30', '2023-08-09')]"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1495,7 +1442,7 @@
    "source": [
     "%%sql\n",
     "\n",
-    "SELECT * FROM Personnel"
+    "SELECT * FROM Borrowed"
    ]
   },
   {
